Project

General

Profile

Actions

Bug #40615

closed

ceph-fuse: mount does not support the fallocate()

Added by huanwen ren almost 5 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
huanwen ren
Category:
-
Target version:
% Done:

0%

Source:
Community (dev)
Tags:
Backport:
nautilus,mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
ceph-fuse
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

ceph version: 14.2.1
fuse version: 2.9.2-6

err info:

tmpfs                         6577748        0    6577748   0% /run/user/0
ceph-fuse                  2781802496 20508672 2761293824   1% /mycephfs
[root@cephfs102 ~]# fallocate -l 10G /mycephfs/filedata
fallocate: /mycephfs/filedata: fallocate failed: Operation not supported
[root@cephfs102 ~]#


Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #40841: mimic: ceph-fuse: mount does not support the fallocate()ResolvedNathan CutlerActions
Copied to CephFS - Backport #40842: nautilus: ceph-fuse: mount does not support the fallocate()ResolvedNathan CutlerActions
Actions #1

Updated by huanwen ren almost 5 years ago

You can see that libfuse already supports the fallocate() function call in version 2.9,
see https://github.com/libfuse/libfuse/blob/fuse_2_9_bugfix/include/fuse_lowlevel.h,
At the same time, the fuse version currently used in the 3.10 kernel is mostly 2.9,
so it is necessary to fix this feature.

https://github.com/ceph/ceph/pull/28831

Actions #2

Updated by Patrick Donnelly almost 5 years ago

  • Subject changed from fs: ceph-fuse mount does not support the fallocate() to ceph-fuse: mount does not support the fallocate()
  • Status changed from New to Fix Under Review
  • Assignee set to huanwen ren
  • Start date deleted (07/02/2019)
  • Source set to Community (dev)
  • Backport set to nautilus,mimic
  • Pull request ID set to 28831
  • ceph-qa-suite deleted (fs)
  • Component(FS) cephfs.pyx added
  • Component(FS) deleted (Client)
Actions #3

Updated by Patrick Donnelly almost 5 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Affected Versions v14.2.2 added
  • Affected Versions deleted (v14.2.1)
  • Component(FS) deleted (cephfs.pyx)
Actions #4

Updated by Nathan Cutler almost 5 years ago

  • Copied to Backport #40841: mimic: ceph-fuse: mount does not support the fallocate() added
Actions #5

Updated by Nathan Cutler almost 5 years ago

  • Copied to Backport #40842: nautilus: ceph-fuse: mount does not support the fallocate() added
Actions #6

Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF