client: support the fallocate() when fuse version >= 2.9

You can see that libfuse already supports the fallocate() function call in version 2.9,
see https://github.com/libfuse/libfuse/blob/fuse_2_9_bugfix/include/fuse_lowlevel.h,
At the same time, the fuse version currently used in the 3.10 kernel is mostly 2.9,
so it is necessary to fix this feature.

Fixes: http://tracker.ceph.com/issues/40615
Signed-off-by: huanwen ren <ren.huanwen@zte.com.cn>